--- a/lab3/Makefile
+++ b/lab3/Makefile
@@ -13,7 +13,7 @@ INCLUDE = -I$(shell pwd)/include -I$(shell pwd)/arch/riscv/include
 CF = -g -march=$(ISA) -mabi=$(ABI) -mcmodel=medany -ffunction-sections -fdata-sections -nostartfiles -nostdlib -nostdinc -fno-builtin -static -lgcc 
 
 # TASK_MM = -DPRIORITY
-TASK_MM = -DSJF
+TASK_MM = -DPRIORITY
 
 CFLAG = ${CF} ${INCLUDE} ${TASK_MM}
 
