--- a/lab4/Makefile
+++ b/lab4/Makefile
@@ -12,7 +12,7 @@ ABI ?= lp64
 INCLUDE = -I$(shell pwd)/include -I$(shell pwd)/arch/riscv/include
 
 CF =  -O2 -march=$(ISA) -mabi=$(ABI) -mcmodel=medany -ffunction-sections -fdata-sections -nostartfiles -nostdlib -nostdinc -static -lgcc -Wl,--nmagic -Wl,--gc-sections 
-CFLAG = ${CF} ${INCLUDE} -DPRIORITY
+CFLAG = ${CF} ${INCLUDE} -DSJF
 
 .PHONY: all run debug clean
 all:
